--- a/index.html
+++ b/index.html
@@ -11,7 +11,11 @@
     <!-- menù header -->
     <header class="menu_header">
         <nav>
-
+            <ul>
+                <li><button class="menu_button"><a href="#">1</a></button></li>
+                <li><button class="menu_button"><a href="#">2</a></button></li>
+                <li><button class="menu_button"><a href="#">3</a></button></li>
+            </ul>
         </nav>
     </header>
     <!-- main container -->
@@ -23,6 +27,7 @@
             <div class="text_shoes">
 
             </div>
+            <div class="prova"></div>
         </section>
 
     </main>
