--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shoes</title>
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Dela+Gothic+One&display=swap" rel="stylesheet">
 </head>
 <body>
     <!-- menù header -->
@@ -20,15 +23,17 @@
     </header>
     <!-- main container -->
     <main class="main_container">
-        <section class="shoes_container" id="red_background">
-            <div class="shoes_container">
-
-            </div>
-            <div class="text_shoes">
-
-            </div>
-            <div class="prova"></div>
-        </section>
+        <!-- Container 1 -->
+        <div class="red_background">
+            <section class="product_container">
+                <div class="shoes_img">
+                    <img src="./img/01.png" alt="blue shoes">
+                </div>
+                <div class="text_shoes">
+                    IL NOSTRO MODELLO <br> DI PUNTA
+                </div>
+            </section>
+    </div>
 
     </main>
 </body>
