--- a/index.html
+++ b/index.html
@@ -24,16 +24,40 @@
     <!-- main container -->
     <main class="main_container">
         <!-- Container 1 -->
-        <div class="red_background">
-            <section class="product_container">
+        <div id="red_background" class="background">
+            <div class="product_container">
                 <div class="shoes_img">
                     <img src="./img/01.png" alt="blue shoes">
                 </div>
                 <div class="text_shoes">
                     IL NOSTRO MODELLO <br> DI PUNTA
                 </div>
-            </section>
-    </div>
+            </div>
+        </div>
+
+        <!-- Container 2 -->
+        <div id="green_background" class="background">
+            <div class="product_container">
+                <div class="shoes_img">
+                    <img src="./img/02.png" alt="blue shoes">
+                </div>
+                <div class="text_shoes">
+                    IL NOSTRO MODELLO <br> DI PUNTA
+                </div>
+            </div>
+        </div>
+
+        <!-- Container 3 -->
+        <div id="yellow_background" class="background">
+            <div class="product_container">
+                <div class="shoes_img">
+                    <img src="./img/03.png" alt="blue shoes">
+                </div>
+                <div class="text_shoes text_green">
+                    IL NOSTRO MODELLO <br> DI PUNTA
+                </div>
+            </div>
+        </div>
 
     </main>
 </body>
