--- a/index.html
+++ b/index.html
@@ -15,16 +15,18 @@
     <header class="menu_header">
         <nav>
             <ul>
-                <li><button class="menu_button"><a href="#">1</a></button></li>
-                <li><button class="menu_button"><a href="#">2</a></button></li>
-                <li><button class="menu_button"><a href="#">3</a></button></li>
+                <li><a href="#red_background"><button class="menu_button">1</button></a></li>
+                <li><a href="#green_background"><button class="menu_button">2</button></a></li>
+                <li><a href="#yellow_background"><button class="menu_button">3</button></a></li>
+                
+                
             </ul>
         </nav>
     </header>
     <!-- main container -->
     <main class="main_container">
         <!-- Container 1 -->
-        <div id="red_background" class="background">
+        <div id="red_background" class="background" >
             <div class="product_container">
                 <div class="shoes_img">
                     <img src="./img/01.png" alt="blue shoes">
