--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <div id="red_background" class="background" >
             <div class="product_container">
                 <div class="shoes_img">
-                    <img src="./img/01.png" alt="blue shoes">
+                    <img src="./img/01.png" alt="Superga">
                 </div>
                 <div class="text_shoes">
                     IL NOSTRO MODELLO <br> DI PUNTA
@@ -41,7 +41,7 @@
         <div id="green_background" class="background">
             <div class="product_container">
                 <div class="shoes_img">
-                    <img src="./img/02.png" alt="blue shoes">
+                    <img src="./img/02.png" alt="Tommy Hilfiger">
                 </div>
                 <div class="text_shoes">
                     IL NOSTRO MODELLO <br> DI PUNTA
@@ -53,7 +53,7 @@
         <div id="yellow_background" class="background">
             <div class="product_container">
                 <div class="shoes_img">
-                    <img src="./img/03.png" alt="blue shoes">
+                    <img src="./img/03.png" alt="Converse">
                 </div>
                 <div class="text_shoes text_green">
                     IL NOSTRO MODELLO <br> DI PUNTA
