--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
     <header class="menu_header">
         <nav>
             <ul>
-                <li><a href="#red_background"><button class="menu_button">1</button></a></li>
-                <li><a href="#green_background"><button class="menu_button">2</button></a></li>
-                <li><a href="#yellow_background"><button class="menu_button">3</button></a></li>
+                <li><div class="menu_button"><a href="#red_background">1</a></div></li>
+                <li><div class="menu_button"><a href="#green_background">2</a></div></li>
+                <li><div class="menu_button"><a href="#yellow_background">3</a></div></li>
                 
                 
             </ul>
